# Galois

./: .clang-format  .clang-tidy  .cproject  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  .project  .tool-versions  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Dockerfile  Doxyfile.in  LICENSE.txt  Makefile  README  README-DIST  README.md  README_SHAD.md  UseDoxygen.cmake  pyproject.toml  setup.py  status.html
apps/: CMakeLists.txt
apps/avi/: CMakeLists.txt  dummy.f95  libraries.def
apps/barneshut/: Barneshut.cpp  Barneshut.h  CMakeLists.txt  OctTreeLeafNodeData.h  OctTreeNodeData.h  Point.h  main.cpp  partitioned.cpp
apps/betweennesscentrality/: BetweennessCentrality.cpp  BetweennessCentralityInner.cpp  BetweennessCentralityOuter.cpp  CMakeLists.txt
apps/bfs/: CMakeLists.txt  Diameter.cpp  HybridBFS.h  bfs.cpp
apps/boruvka/: Boruvka.cpp  Boruvka2.cpp  BoruvkaMerge.cpp  CMakeLists.txt  UnionFind.h
apps/bp/: CMakeLists.txt  bp-dai.cpp  bp.cpp
apps/clustering/: AbstractNode.h  Box3d.h  ClusterNode.h  Clustering.cpp  ClusteringSerial.h  KdCell.h  KdTree.h  KdTreeConflictManager.h  LeafNode.h  NodeWrapper.h  PotentialCluster.h  RandomGenerator.h
apps/connectedcomponents/: CMakeLists.txt  ConnectedComponents.cpp
apps/cuthill/: CMakeLists.txt  cuthill-distr.cpp  cuthill.cpp
apps/delaunayrefinement/: CMakeLists.txt  Cavity.h  DelaunayRefinement.cpp  Edge.h  Element.h  Mesh.h  Subgraph.h  Tuple.h  Verifier.h
apps/delaunaytriangulation/: CMakeLists.txt  Cavity.h  DataManager.h  DelaunayTriangulation.cpp  DelaunayTriangulation2.cpp  DelaunayTriangulationDet.cpp  Element.cpp  Element.h  Graph.h  Makefile  Point.h  QuadTree.h  Tuple.h  Verifier.h  cmake_install.cmake  delaunaytriangulation.REMOVED.git-id  random10000.txt.REMOVED.git-id  random1000000.txt.REMOVED.git-id
apps/des/: CMakeLists.txt
apps/gmetis/: ArraySet.h  Balancing.cpp  CMakeLists.txt  Coarsening.cpp  Coarsening.h  FM2WayRefining.cpp  GMetis.cpp  GMetisConfig.h  GraphReader.h  GrowBisection.cpp  HEM.h  KMetisRefining.cpp  Metis.h  MetisGraph.h  MetisNode.h  Metric.cpp  Metrics.h  PMetis.h  PMetisRefining.cpp  PQueue.h  Partitioning.cpp  Partitioning.h  RM.h  RandomKWayRefiner.h  RandomRefiner.h  Refine.cpp  Refine.h  defs.h
apps/independentset/: IndependentSet.cpp
apps/kruskal/: CMakeLists.txt  Kruskal.h  KruskalDet.cpp  KruskalFilter.cpp  KruskalHand.cpp  KruskalHand.h  KruskalLevelExec.h  KruskalNaive.cpp  KruskalOrdered.h  KruskalOrderedNonSrc.cpp  KruskalParallel.h  KruskalRecursive.cpp  KruskalRecursive.h  KruskalSerial.h  KruskalSpec.h  KruskalStrictOBIM.h  KruskalWindow.cpp  KruskalWindow.h
apps/linear/: CMakeLists.txt  linear.cpp
apps/matching/: BipartiteCardinality.cpp  CMakeLists.txt  bipartite-mcm.cpp
apps/pagerank/: CMakeLists.txt  GraphLabAlgo.h  LigraAlgo.h  PPR.h  PageRank.cpp  PageRank.h  PageRankAsync.h  PageRankAsyncPri.h  PageRankAsyncPriSet.h  PageRankAsyncResidual.h  PageRankEdge.h  PageRankOld.cpp  PageRankOld.h
apps/pmst/: CMakeLists.txt  Pmst.cpp
apps/preflowpush/: Builder.h  Builder2.h  CMakeLists.txt  Edge.h  Local.h  Makefile  Node.h  PreflowPush.cpp  Preflowpush.cpp  cmake_install.cmake  include.h  p1.c  p1.cpp  randGraph400x400.txt.REMOVED.git-id
apps/pta/: PointsTo.cpp  SparseBitVector.h
apps/spanningtree/: CMakeLists.txt  SpanningTree.cpp
apps/sssp/: CMakeLists.txt  DeltaStepping.cpp  ExecutorType.cpp  ExecutorType.h  GraphLabAlgo.h  LigraAlgo.h  Node.cpp  Node.h  SEdge.cpp  SEdge.h  SNode.cpp  SNode.h  SSSP.cpp  SSSP.cpp.new  SSSP.h  SSSPall.cpp  SSSPall.h  UpdateRequest.cpp  UpdateRequest.h  WorkListTL.h  main.cpp
apps/surveypropagation/: CMakeLists.txt  SurveyPropagation.cpp
apps/tutorial/: CMakeLists.txt  HelloWorld.cpp  SSSPPullSimple.cpp  SSSPsimple.cpp  Torus.cpp  TorusImproved.cpp
apps/visualize/: CMakeLists.txt  drawgraph.cpp
bliss/: CMakeLists.txt  Makefile
bliss/include/: abgraph.hh  bliss_C.h  digraph.hh  graph.hh  orbit.hh  partition.hh  timer.hh  uintseqhash.hh
bliss/src/: abgraph.cc  bliss.cc  bliss_C.cc  digraph.cc  graph.cc  timer.cc
dist_apps/: CMakeLists.txt  README.md
dist_apps/bc/: gen.cpp  gen_cuda.cuh  gen_cuda.h  gen_sync.hh
dist_apps/bc_level/: bc_level.cpp  bc_level_cuda.cu  bc_level_sync.hh
dist_apps/bc_level_opt/: bc_level_opt.cpp
dist_apps/bc_mr/: bc_mr.cpp  mrbc_sync.hh  mrbc_tree.h
dist_apps/bc_ordered/: bc_ordered.cpp  bc_ordered_sync.hh
dist_apps/bc_pull/: gen.cpp  gen_sync.hh
dist_apps/bc_push/: README.md  bc_push.cpp  bc_push_cuda.cu  bc_push_cuda.cuh  bc_push_cuda.h  bc_push_cuda.py  bc_push_sync.hh  gen.cpp  gen_cuda.cu  gen_cuda.cuh  gen_cuda.h  gen_sync.hh
dist_apps/bfs_pull/: README.md  bfs_pull.cpp  bfs_pull_cuda.cu  bfs_pull_cuda.cuh  bfs_pull_cuda.h  bfs_pull_cuda.py  gen.cpp  gen_cuda.cu  gen_cuda.cuh  gen_cuda.h  gen_cuda.py
dist_apps/bfs_pull-topological/: gen.cpp  gen_cuda.h  gen_sync.hh
dist_apps/bfs_push-filter/: gen.cpp  gen_cuda.cu  (+3 more)
exp/: CMakeLists.txt
inputs/: CMakeLists.txt
lib/: CMakeLists.txt  hwloc-1.1.1.tar.bz2.REMOVED.git-id  hwloc-1.1.1.tar.gz.REMOVED.git-id
libcusp/: CMakeLists.txt
libdeepgalois/: CMakeLists.txt  common.h  cutils.h  gnn.h  gpu_kernels.hpp  licensenote.txt  math_functions.hpp  net.h  utils.h
libdist/: CMakeLists.txt
libexp/: CMakeLists.txt
libgalois/: CMakeLists.txt  CMakeLists.txt~
libgluon/: CMakeLists.txt
libgnn/: CMakeLists.txt  README.md
libgpu/: CMakeLists.txt
libgraphs/: CMakeLists.txt
libllvm/: CMakeLists.txt
libnet/: CMakeLists.txt
libpangolin/: CMakeLists.txt  README.md  domain_support.h  element.h  embedding.h  gtypes.h  miner.h  pangolin.h  scan.h  types.h  util.h
libpygalois/: CMakeLists.txt
libruntime/: CMakeLists.txt
libsubstrate/: CMakeLists.txt
libsupport/: CMakeLists.txt
libtsuba/: CMakeLists.txt
libwmd/: CMakeLists.txt
lonestar/: CMakeLists.txt
lonestardist/: CMakeLists.txt
lonestargnn/: CMakeLists.txt  lonestargnn.h
lonestarmine/: CMakeLists.txt  README.md  lonestarmine.h
python/: CMakeLists.txt  LICENSE  README  run_setup.sh  setup.py
(+8187 files in other folders)
