include(ParseArguments)

function (compileApp name) 
  if(ARGN)
    set(Sources ${ARGN})
  else()
    file(GLOB Sources *.cpp)
  endif()
  add_executable(${name} ${Sources})
endfunction (compileApp)

function(app name)
  PARSE_ARGUMENTS(APP "REQUIRES" "" ${ARGN})

  foreach(required ${APP_REQUIRES})
    if(NOT ${${required}})
      message(STATUS "Not compiling ${name} (missing: ${required})")
      return()
    endif()
  endforeach()

  compileApp(${name} ${APP_DEFAULT_ARGS})
  linkRuntime(${name})
  install(TARGETS ${name} DESTINATION bin)
endfunction(app)

add_subdirectory(avi)
add_subdirectory(barneshut)
add_subdirectory(betweennesscentrality)
add_subdirectory(bp)
add_subdirectory(boruvka)
add_subdirectory(clustering)
add_subdirectory(delaunayrefinement)
add_subdirectory(delaunaytriangulation)
add_subdirectory(des)
add_subdirectory(gmetis)
add_subdirectory(linear)
add_subdirectory(matching)
add_subdirectory(pagerank)
add_subdirectory(pmst)
add_subdirectory(preflowpush)
add_subdirectory(sssp)
add_subdirectory(surveypropagation)
add_subdirectory(spanningtree)
