add_subdirectory(avi)
add_subdirectory(barneshut)
add_subdirectory(betweennesscentrality)
add_subdirectory(bfs)
add_subdirectory(boruvka)
add_subdirectory(clustering)
add_subdirectory(connectedcomponents)
add_subdirectory(delaunayrefinement)
add_subdirectory(delaunaytriangulation)
add_subdirectory(des)
add_subdirectory(independentset)
add_subdirectory(kruskal)
add_subdirectory(gmetis)
add_subdirectory(matching)
add_subdirectory(pta)
add_subdirectory(preflowpush)
add_subdirectory(sssp)
add_subdirectory(surveypropagation)
add_subdirectory(spanningtree)
add_subdirectory(tutorial)
