if(NOT CMAKE_CXX_COMPILER_ID MATCHES "XL")
  add_subdirectory(avi)
  add_subdirectory(connectedcomponents)
  add_subdirectory(des)
  add_subdirectory(kruskal)
  add_subdirectory(gmetis)
endif()
add_subdirectory(barneshut)
add_subdirectory(betweennesscentrality)
add_subdirectory(bfs)
add_subdirectory(boruvka)
add_subdirectory(clustering)
add_subdirectory(delaunayrefinement)
add_subdirectory(delaunaytriangulation)
add_subdirectory(independentset)
add_subdirectory(matching)
add_subdirectory(pagerank)
add_subdirectory(pta)
add_subdirectory(preflowpush)
add_subdirectory(sssp)
add_subdirectory(surveypropagation)
add_subdirectory(spanningtree)
add_subdirectory(tutorial)
